--- a/package.json
+++ b/package.json
@@ -15,5 +15,18 @@
   "bugs": {
     "url": "https://github.com/PradyumanAgrawal/Integration-test-repo/issues"
   },
-  "homepage": "https://github.com/PradyumanAgrawal/Integration-test-repo#readme"
+  "homepage": "https://github.com/PradyumanAgrawal/Integration-test-repo#readme",
+  "dependencies": {
+    "body-parser": "^1.15.0",
+    "express": "^4.13.4",
+    "gulp": "^3.9.1",
+    "gulp-jshint": "^2.0.0",
+    "jshint": "^2.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2"
+  }
+
+
 }
+
