--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Intergrating Node application with github",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp"
   },
   "repository": {
     "type": "git",
@@ -19,14 +20,11 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-jshint": "^2.0.0",
     "jshint": "^2.9.1"
   },
   "devDependencies": {
     "nodemon": "^1.9.2"
   }
-
-
 }
-
