--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "github-integration-test-repo",
-  "version": "1.0.0",
-  "description": "Intergrating Node application with github",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "gulp"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/PradyumanAgrawal/Integration-test-repo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/PradyumanAgrawal/Integration-test-repo/issues"
-  },
-  "homepage": "https://github.com/PradyumanAgrawal/Integration-test-repo#readme",
-  "dependencies": {
-    "body-parser": "^1.15.0",
-    "express": "^4.13.4",
-    "gulp": "^4.0.2",
-    "gulp-jshint": "^2.0.0",
-    "jshint": "^2.9.1"
-  },
-  "devDependencies": {
-    "nodemon": "^1.9.2"
+    "name": "github-integration-test-repo",
+    "version": "1.0.0",
+    "description": "Intergrating Node application with github",
+    "main": "app.js",
+    "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "start": "node app.js"
+    },
+    "repository": {
+      "type": "git",
+      "url": "git+https://github.com/PradyumanAgrawal/Integration-test-repo.git"
+    },
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+      "url": "https://github.com/PradyumanAgrawal/Integration-test-repo/issues"
+    },
+    "homepage": "https://github.com/PradyumanAgrawal/Integration-test-repo#readme",
+    "dependencies": {
+      "express": "^4.13.4"
+    },
+    "devDependencies": {
+      "nodemon": "^1.9.2"
+    }
   }
-}
